const-tests/translation_starts_with_u.stderr
error[E0080]: evaluation of constant value failed
 --> const-tests/translation_starts_with_u.rs:3:28
  |
3 |   const _ESC: Escape<8, 4> = Escape::const_new(
  |  ____________________________^
4 | |     '\\',
5 | |     ['\\', '[', ']', '"', '\0', '\n', '\r', '\t'],
6 | |     [('\n', "uabc"), ('\r', "r"), ('\0', "0"), ('\t', "t")],
7 | |     None,
8 | | );
  | |_^ evaluation panicked: assertion failed: tr[i].1.as_bytes()[0] != b'u'
  |
note: inside `escaping::Escape::<'_, 8, 4>::const_new`
 --> src/lib.rs
  |
  |             assert!(tr[i].1.as_bytes()[0] != b'u');
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
